# fairytale-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: main.yml  release.yml
dev/: DEV_README.md
fairytale_bot/: bot.py  fairytale_settings.py  lib.py  user_settings.py
fairytale_bot/resources/: random_authors.txt  random_fairytale_authors.txt  random_locations.txt  random_morals.txt  random_plots.txt
project_name/: __init__.py
tests/: README.md  test_app.py
